BUG#49100: RBR: Unexpected behavior when AI contains no usable            data for slave columns

RBR was not fully compliant with empty before and after
images (BI and AI) in row events. Several faulty scenarios
surfaced during WL#5092 implementation, especially when MINIMAL
images were used:
      
  S1. Inserting an empty row on the master would cause slave to
      skip the event (empty AI);
      
      Problem: Master and slave would become out of sync.

      Expected: slave(s) shall apply the insert and fill its
      table with default values as master did.
      
  S2. Master inserts values just for columns that slave doesn't
      have (unusable AI at the slave).
      
      Problem: In a chained replication scenario (m -> s1 -> s2),
      m and s1 would be in sync, but s2 would not.

      Expected: slave(s) shall apply the insert and fill its
      table with default values as master did for columns that
      user did not provide data.
       
  S3. Master updates columns that only it knows about (unusable
      AI at the slave) but references columns that it shares with
      the slave (usable BI at the slave). This would trigger an
      assertion on a third slave in chained replication: m -> s1
      -> s2, s2 would abort.

      Problem: in chained replication scenario (m -> s1 -> s2),
      s2 would trigger an assertion while unpacking the row
      logged by s1.
      
      Expected: slave s1 shall not update any row and slave s2
      shall not assert.
      
  S4. Master updates and references columns that only it knows
      about (unusable AI and BI at the slave).

      Problem: although AI does not contain any data for updating
      the slave (update becomes no-op), the slave stops with
      error, because BI does not also contain relevant data for
      finding the record.
      
      Expected: slave(s) shall skip the event, thence not even
      trying to update its tables with any value.
      
  S5. Master references columns that only it knows
      about (unusable BI at the slave) and updates columns shared
      with the slave (usable AI at the slave). Slave must stop.
      
      Problem: none really. Just adding the test case for
      coverage purposes.

      Expected: slave(s) shall fail with HA_ERR_END_OF_FILE.
      
We fix S1 to S3 by relaxing some asserts that were triggered on
when processing empty images and by doing some changes to
accomodate the fact that some images might be empty. 

For S4, we deploy a check in Update_rows_log_event::do_exec_row
that verifies if there is any value in the AI. If there is not,
then the event is skipped (neither BI nor AI is are processed).

As for S5, we just add the test case.
      
For mysqlbinlog --verbose --base64=decode-rows we print out an
INSERT INTO t VALUES () when a write rows event contains an empty
AI.